fix: improve error paragraph readability

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ main {
 button:hover {
     cursor: pointer;
     background-color: rgb(100 100 100 / .2);
+    transition: background-color 0.3s ease;
     border-radius: 10%;
 }
 
@@ -81,9 +82,12 @@ footer {
 
 .error {
     display: none;
-    color: red;
+    color: ff6666;
     text-align: center;
     margin-top: 10px;
+    background-color: rgba(255, 0, 0, 0.1);
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .game-header {
